--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,67 @@
-header h1 {
-background-color: rgba(96, 199, 224);
-color: Black;
-text-align: center;
+header {
+background-color: rgb(38, 164, 196);
+color: white;
 margin: 4px;
-border: 1px;
 padding: 4px;
+font-family:Arial, Helvetica, sans-serif;
 }
-header nav ul li {
-display:inline;
-text-decoration:none;
+header h1 {
+    text-align:center ;
+    font-size: xx-large;
+    
 
-;
+}
+header ul li  {
+    display: inline;
+   text-align: right;
+    
+}
 
+header ul li a {
+    text-decoration:none;
+    color: white;
+    
+}
+main h3{
+    text-align: left;
+    font-size: large;
+    color:rgb(38, 164, 196);
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    
+}
+main p {
+    text-align: left;
+    font-size: x-large;
+    float: left;
+    width:50%;
+    vertical-align: bottom;
+    color:#0080ff;
+    font-style: italic;
+
+}
+
+main img {
+    height:200px;
+    width: 600px;
+    -o-object-position: left;
+    
+}
+#first {
+    float: left;
+}
+#second {
+    float: right;
+}
+body ul{
+    color:#0080ff;
+    font-size: large;
+
+}
+footer{
+    font-family:Arial, Helvetica, sans-serif;
+    padding-top: 130px;
+    float: left;  
+    text-decoration: none;
+   color:#0080ff;
 }
